cabal-version:      2.4
name:               hasql-explain-tests
version:            0.1.0.0
synopsis:           Hasql queries testing interface
homepage:           https://github.com/cheopslab/hasql-explain-tests
bug-reports:        https://github.com/cheopslab/hasql-explain-tests/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Alexander Vershilov
maintainer:         alexander.vershilov@sirius.online

copyright:          (C) Talant i uspeh, 2022 
category:           Testing
extra-source-files: CHANGELOG.md

description:        The library that provides an interface to test queries
                    in the projects that are using hasql library. Hasql library
                    is very lowlevel and allows to use all the features of postgres
                    at the cost of losing type safety. This package intended to
                    fill the gap and simplify testing the project.


library
    exposed-modules:  Test.Database.Hasql
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
      ImportQualifiedPost
      LambdaCase
      OverloadedStrings
    build-depends:    base ^>=4.14.3.0,
                      bytestring <1,
                      hasql >= 1.0,
                      tmp-postgres >= 1.34,
                      QuickCheck >= 2.0,
                      profunctors ^>= 5.6,
                      hspec
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hasql-explain-tests-simple
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          simple.hs
    default-extensions:
      OverloadedStrings
    build-depends:    base ^>=4.14.3.0,
                      hasql-explain-tests,
                      tasty, 
                      tasty-hunit,
                      hasql
